# exiftool

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit-action.yaml
defaults/: main.yml
handlers/: main.yml
helpers/: get-versions-and-hashes.sh
meta/: main.yml
molecule/bionic/: converge.yml  molecule.yml
molecule/focal/: molecule.yml
molecule/focal/tests/: test_default.py
molecule/xenial/: converge.yml  molecule.yml  prepare.yml
molecule/xenial/tests/: test_default.py
tasks/: check_vars.yml  install.yml  main.yml
tests/: test.retry  test.yml
vars/: main.yml
