[tool.poetry]
name = "exiftool"
version = "0.2.1"
description = "Role to install ExifTool."
authors = ["Thomas Lehoux, Daniel Hoherd"]

[tool.poetry.dependencies]
python = "^3.6.1"
ansible = "^2.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
testinfra = "^5.3.1"
docker = "^4.3.1"
molecule = "^3.0.8"
pytest = "^6.1.1"

[tool.black]
line-length = 132
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '(venv|.vscode)'

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"
