[tool.poetry]
name = "exiftool"
version = "0.2.1"
description = "Role to install ExifTool."
authors = ["Thomas Lehoux, Daniel Hoherd"]

[tool.poetry.dependencies]
python = "^3.6.1"
ansible = "^2.10.7"
pre-commit = "^2.10.1"
pytest = "^6.2.2"
molecule = "^3.2.3"
docker = "^4.4.2"
testinfra = "^5.3.1"
molecule-docker = "^0.3.3"

[tool.black]
line-length = 132
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '(venv|.vscode)'

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"
